# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_camera/distributedcamera.gni")

module_out_path = "distributed_camera/dcamera_data_process_test"

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${services_path}/data_process/include/interfaces",
    "${services_path}/data_process/include/eventbus",
    "${services_path}/data_process/include/pipeline",
    "${services_path}/data_process/include/utils",
    "${services_path}/data_process/include/pipeline_node/multimedia_codec/decoder",
    "${services_path}/data_process/include/pipeline_node/multimedia_codec/encoder",
    "${services_path}/data_process/include/pipeline_node/colorspace_conversion",
    "${services_path}/data_process/include/pipeline_node/fpscontroller",
    "${services_path}/data_process/include/pipeline_node/scale_conversion",
    "${services_path}/cameraservice/sinkservice/include/distributedcameramgr",
    "${common_path}/include/constants",
    "${common_path}/include/utils",
    "${innerkits_path}/native_cpp/camera_source/include",
    "//commonlibrary/c_utils/base/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/eventbus",
    "//third_party/ffmpeg/",
  ]
}

ohos_unittest("DCameraDataProcessPipelineNodeTest") {
  module_out_path = module_out_path

  sources = [
    "color_format_process_test.cpp",
    "decode_data_process_test.cpp",
    "encode_data_process_test.cpp",
    "fps_controller_process_test.cpp",
    "scale_convert_process_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${common_path}:distributed_camera_utils",
    "${services_path}/data_process:distributed_camera_data_process",
    "//foundation/graphic/graphic_2d/frameworks/surface:surface",
    "//third_party/ffmpeg:libohosffmpeg",
  ]

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hitrace_native:hitrace_meter",
    "multimedia_player_framework:media_client",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"DCameraDataProcessPipelineNodeTest\"",
    "LOG_DOMAIN=0xD004100",
  ]
}

group("dcamera_pipeline_node_test") {
  testonly = true
  deps = [ ":DCameraDataProcessPipelineNodeTest" ]
}
